Better placeholder support, added appendable types

--- a/table/static/html/table.html
+++ b/table/static/html/table.html
@@ -1,49 +1,36 @@
 <div class="table_block">
-	<div id="table_modal" data-bind="with: tempRow, visible:tempRow()">
-	
-		 <!-- ko foreach: $root.columns -->
-			<div class="row header bottom">
-				<div class="cell">
-					<span type="text" data-bind="text: name"></span>
-				</div>				
-				{self._cell}
-			</div>
-		<!-- /ko -->
-	</div>
 	<div id="table_container">
 		<div class="row header bottom">
-		
 			<!-- ko foreach: columns -->
-			<div class="cell">
-				<span type="text" data-bind="text: name"></span>
-			</div>
+				<div class="cell">
+					<span type="text" data-bind="text: name"></span>
+				</div>
 			<!-- /ko -->
-			
 			<div class="cell">
 				<input type="text" placeholder="Enter new column name">
 			</div>
 		</div>
-
 		<!-- ko foreach: rows -->
 			<div class="row bottom">
-				<!-- ko if: !$data.type || type.match(/parent/gi) -->
-				<div class="header row parent">
-					<span data-bind="text:value"></span>				
-				</div>
-				<div class="row">
-					<div class="cell"><span data-bind="click:$root.addTempRow">Add item</span></div>
-				</div>
-				<!-- /ko -->
-				<!-- ko if: (!$data.type || type.match(/parent/gi)) && $data.children && children().length > 0 -->
-					
-					<!-- ko foreach: $data.children -->
-						<div class="row" data-bind="foreach: $root.columns">
-							{self._cell}
-						</div>
+				<!-- ko if: $data.type().match(/parent/gi) -->
+					<div class="header row parent">
+						<span data-bind="text:value"></span>				
+					</div>
+					<!-- ko if: $data.children && children().length > 0 -->
+						<!-- ko foreach: $data.children -->
+							<div class="row" data-bind="foreach: $root.columns">
+								{self._cell}
+							</div>
+						<!-- /ko -->
 					<!-- /ko -->
-					
+					<div class="row">
+						<div class="cell"><button data-bind="click:$root.addTempRow">Add item</button></div>
+					</div>
+					<div class="table_add_parent" data-bind="if:$data.type() == 'parentAppendable'">
+						<button data-bind="text: 'Add ' + name, click: $root.addAppendableRow"></button>
+					</div>
 				<!-- /ko -->
-				<!-- ko if: $data.type && !type.match(/parent/gi) -->
+				<!-- ko if: !type().match(/parent/gi) -->
 					<div class="row" data-bind="foreach: $root.columns">
 						{self._cell}
 					</div>
@@ -51,5 +38,19 @@
 			</div>
 		<!-- /ko -->
 	</div>
-	<div id="table_overlay" data-bind="visible:tempRow()"></div>	
+	<div id="table_modal" data-bind="with: tempRow, visible:tempRow()" style="display:none;">
+		<div class="modal_container" data-bind="foreach: $root.columns">
+			<div class="row bottom">
+				<div class="cell header">
+					<span type="text" data-bind="text: name"></span>
+				</div>				
+				{self._cell}
+			</div>
+		</div>
+		<div class="modal_footer">
+			<button data-bind="click:$root.pushRow">Save</button>
+			<button data-bind="click:$root.cancelModal">Cancel</button>
+		</div>
+	</div>
+	<div id="table_overlay" data-bind="visible:tempRow(), click:cancelModal" style="display:none;"></div>	
 </div>
