Student viewmodel successfully updating with Studio viewmodel

--- a/table/static/html/table_edit.html
+++ b/table/static/html/table_edit.html
@@ -55,7 +55,7 @@
                 <a href="#" class="save-button action-primary action">Save</a>
             </li>
             <li class="action-item">
-                <a href="#" class="button cancel-button">Cancel</a>
+                <a href="#" class="button cancel-button" data-bind="click: $root.cancel">Cancel</a>
             </li>
         </ul>
     </div>
