--- a/table/static/html/table_edit.html
+++ b/table/static/html/table_edit.html
@@ -14,17 +14,20 @@
 					<span class="tip setting-help">The title of the chart that is displayed to the user</span>
 				</div>
 				<div class="nfRow" data-bind="if:columns().length > 0">
-					<div class="cell" style="width:25%;">Column Label</div>
-					<div class="cell" style="width:25%;">Placeholder Text</div>
-					<div class="cell" style="width:25%;">Type</div>
+					<div class="cell" style="width:20%;">Column Label</div>
+					<div class="cell" style="width:20%;">Placeholder Text</div>
+					<div class="cell" style="width:20%;">Type</div>
+					<div class="cell" style="width:10%;">Visible</div>
 				</div>
 				<!-- ko foreach: columns -->
 				<div class="nfRow">
 									
-					<input class="input setting-input cell" style="width:25%;" data-bind="value:name" type="text">
-					<input class="input setting-input cell" style="width:25%;" data-bind="value:$data.placeholder" type="text">
-					<select class="input setting-input cell" style="width:25%;" data-bind="options:$root.columnTypes, value: type"></select>
-				
+					<input class="input setting-input cell" style="width:20%;" data-bind="value:name" type="text">
+					<input class="input setting-input cell" style="width:20%;" data-bind="value:$data.placeholder" type="text">
+					<select class="input setting-input cell" style="width:20%;" data-bind="options:$root.columnTypes, value: type"></select>
+					<div class="cell" style="height:45px;padding-top:10px;">
+						<input class="input setting-input cell" style="width:20%;height:20px;" type="checkbox" data-bind="checked:$root.columnVisible($data)">
+					</div>
 				</div>
 				<!-- /ko -->
 		  </li>
