Added better scoping

--- a/table/static/html/table_edit.html
+++ b/table/static/html/table_edit.html
@@ -14,7 +14,7 @@
 					<span class="tip setting-help">The title of the chart that is displayed to the user</span>
 				</div>
 				<div class="nfRow" data-bind="if:columns().length > 0">
-					<div class="cell" style="width:20%;">Column Label</div>
+					<div class="cell" style="width:20%;">Column Label (Unique)</div>
 					<div class="cell" style="width:20%;">Placeholder Text</div>
 					<div class="cell" style="width:20%;">Type</div>
 					<div class="cell" style="width:10%;">Visible</div>
