Better support for persisting data

--- a/table/static/html/table.html
+++ b/table/static/html/table.html
@@ -39,6 +39,7 @@
 				<!-- /ko -->
 			</div>
 		<!-- /ko -->
+		<button data-bind="click:saveUserData" class="saveButton">Save</button>
 	</div>
 	<div id="table_modal" data-bind="with: tempRow, visible:tempRow()" style="display:none;">
 		<div class="modal_container" data-bind="foreach: $root.visibleColumns()">
