--- a/table/static/html/table_edit.html
+++ b/table/static/html/table_edit.html
@@ -18,6 +18,7 @@
 					<div class="cell" style="width:20%;">Placeholder Text</div>
 					<div class="cell" style="width:20%;">Type</div>
 					<div class="cell" style="width:10%;">Visible</div>
+					<div class="cell" style="width:10%;">xAPI Enabled</div>
 				</div>
 				<!-- ko foreach: columns -->
 				<div class="nfRow">
@@ -25,8 +26,11 @@
 					<input class="input setting-input cell" style="width:20%;" data-bind="value:name" type="text">
 					<input class="input setting-input cell" style="width:20%;" data-bind="value:$data.placeholder" type="text">
 					<select class="input setting-input cell" style="width:20%;" data-bind="options:$root.columnTypes, value: type"></select>
-					<div class="cell" style="height:45px;padding-top:10px;">
+					<div class="cell" style="height:45px;padding-top:10px;width:10%;">
 						<input class="input setting-input cell" style="width:20%;height:20px;" type="checkbox" data-bind="checked:$root.columnVisible($data)">
+					</div>
+					<div class="cell" style="height:45px;padding-top:10px;width:10%;">
+						<input class="input setting-input cell" style="width:10%;height:20px;" type="checkbox">
 					</div>
 				</div>
 				<!-- /ko -->
