Publishing statement logs via edX

--- a/table/static/html/table_edit.html
+++ b/table/static/html/table_edit.html
@@ -3,7 +3,7 @@
 		  <li class="field comp-setting-entry is-set">
 				<div class="">
 					<label class="label setting-label">Display Name</label>
-					<input class="input setting-input edit-display-name" id="edit_display_name" value="{self.display_name}" type="text">
+					
 					<span class="tip setting-help">The title of the table that is displayed to the user</span>
 				</div>
 		  </li>
@@ -20,7 +20,7 @@
 					<div class="cell" style="width:8%;">Visible</div>
 					<div class="cell" style="width:8%;">xAPI Trigger</div>
 					<div class="cell" style="width:8%;">Related Context</div>
-					<div class="cell" style="width:8%;">Result Key</div>
+					<div class="cell" style="width:8%;">Object</div>
 				</div>
 				<!-- ko foreach: columns -->
 				<div class="nfRow">
@@ -38,7 +38,7 @@
 						<input class="input setting-input cell" style="width:100%;height:20px;" type="checkbox" data-bind="checked:$data.context">
 					</div>
 					<div class="cell" style="height:45px;padding-top:10px;width:8%;">
-						<input class="input setting-input cell" style="width:100%;height:20px;" type="radio" name="xAPIResultKey" data-bind="click: $root.setXAPIResultKey, attr: {{checked: $root.xAPIResultKey() == $data.name()}}">
+						<input class="input setting-input cell" style="width:100%;height:20px;" type="radio" name="xAPIObject" data-bind="click: $root.setXAPIObject, attr: {checked: $root.xAPIObject() == $data.name()}">
 					</div>
 				</div>
 				<!-- /ko -->
