Added 'related contexts' in statement

--- a/table/static/html/table_edit.html
+++ b/table/static/html/table_edit.html
@@ -3,7 +3,7 @@
 		  <li class="field comp-setting-entry is-set">
 				<div class="">
 					<label class="label setting-label">Display Name</label>
-					
+					<input class="input setting-input edit-display-name" id="edit_display_name" type="text" data-bind="value:displayName">
 					<span class="tip setting-help">The title of the table that is displayed to the user</span>
 				</div>
 		  </li>
