Added xAPI Config options in front and back ends

--- a/table/static/html/table_edit.html
+++ b/table/static/html/table_edit.html
@@ -70,6 +70,20 @@
 				</div>
 				<!-- /ko -->
 		  </li>
+		  <li class="field comp-setting-entry is-set">
+				<div class="">
+					<label class="label setting-label">xAPI Endpoint</label>
+					<input type="text" class="input setting-input" data-bind="value:endpoint"  style="width:300px;"/><br/><br/>
+				</div>
+				<div class="">
+					<label class="label setting-label">Basic Auth User</label>
+					<input type="text" class="input setting-input" data-bind="value:user" style="width:300px;"/><br/><br/>
+				</div>
+				<div class="">
+					<label class="label setting-label">Basic Auth Password</label>
+					<input type="password" class="input setting-input" data-bind="value:pass" style="width:300px;"/><br/><br/>
+				</div>
+		  </li>
 	  </ul>
       <div class="xblock-actions">
         <span class="xblock-editor-error-message"></span>
